--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -22,5 +22,8 @@
     "tsup": "^6.7.0",
     "typescript": "^5.0.2"
   },
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@stitches/react": "^1.2.8"
+  }
 }
