--- a/packages/docs/tsconfig.json
+++ b/packages/docs/tsconfig.json
@@ -1,4 +1,4 @@
 {
-    "extends": "@ignite-ui/ts-config/react.json",
+    "extends": "@design.system-ignite-ui/ts-config/react.json",
     "include": ["src"]
 }
