ci: add TurboRepo cache on deploy build

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -20,6 +20,9 @@ jobs:
       - run: npm ci
 
       - run: npm run build
+        env:
+          TURBO_TOKEN: NcSjZ4lolD2iJVa3NOR5AOwG
+          TURBO_TEAM: jessica-garcia
 
       - name: Deploy storybook
         working-directory: ./packages/docs
